--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\KESHRI\AppData\Local\Temp\testng-eclipse-1435082371\testng-customsuite.xml</span>
+                    <span>C:\Users\KESHRI\AppData\Local\Temp\testng-eclipse-1131262190\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="createLeads.TC_01" class="method navigator-link" hash-for-method="methodTC_01">methodTC_01</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="practice12.ReadDataFromCmdLine" class="method navigator-link" hash-for-method="methodTC01">methodTC01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">createLeads.TC_01</span>
+              <span class="class-name">practice12.ReadDataFromCmdLine</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="methodTC_01">
-                  </a> <!-- methodTC_01 -->
-                  <span class="method-name">methodTC_01</span>
+                  <a name="methodTC01">
+                  </a> <!-- methodTC01 -->
+                  <span class="method-name">methodTC01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\KESHRI\AppData\Local\Temp\testng-eclipse-1435082371\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\KESHRI\AppData\Local\Temp\testng-eclipse-1131262190\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;createLeads.TC_01&quot;/&gt;
+      &lt;class name=&quot;practice12.ReadDataFromCmdLine&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -170,14 +170,6 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">smokeSuite</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">methodTC_01</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -196,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'methodTC_01')
-data.setCell(0, 2, 'createLeads.TC_01')
-data.setCell(0, 3, 20614);
+data.setCell(0, 1, 'methodTC01')
+data.setCell(0, 2, 'practice12.ReadDataFromCmdLine')
+data.setCell(0, 3, 16);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 20 seconds</span>
+              <span class="suite-total-time">Total running time: 16 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -229,27 +221,11 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">createLeads.TC_01</div> <!-- chronological-class-name -->
-              <div class="configuration-suite before">
-                <span class="method-name">beforeSuite</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-suite before -->
-              <div class="configuration-method before">
-                <span class="method-name">beforeMethod</span>
-                <span class="method-start">340 ms</span>
-              </div> <!-- configuration-method before -->
+              <div class="chronological-class-name">practice12.ReadDataFromCmdLine</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">methodTC_01</span>
-                <span class="method-start">12023 ms</span>
+                <span class="method-name">methodTC01</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">afterMethod</span>
-                <span class="method-start">32653 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-suite after">
-                <span class="method-name">methodAfterSuite</span>
-                <span class="method-start">35409 ms</span>
-              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
