--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,16 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>createLeads.TC_01</td>
+<td>practice12.ReadDataFromCmdLine</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>methodTC_01</td>
-<td>smokeSuite </td>
-</tr>
+<td>methodTC01</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
@@ -21,17 +20,7 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeMethod</td>
-<td>smokeSuite regressionSUite </td>
-</tr>
-<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterMethod</td>
-<td>smokeSuite regressionSUite </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
