--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,1 @@
-<h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>smokeSuite</td><td>TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@40a4337a]<br/></td></tr>
-</table>
+<h2>Groups used for this test run</h2>
