--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c7b8ac">  <td>25/02/24 22:53:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.afterMethod()[pri:0, instance:createLeads.TC_01@40a4337a]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/02/24 22:53:21</td>   <td>-32312</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.beforeMethod()[pri:0, instance:createLeads.TC_01@40a4337a]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/02/24 22:53:20</td>   <td>-32648</td> <td title="&gt;&gt;BaseClass.beforeSuite()[pri:0, instance:createLeads.TC_01@40a4337a]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="c7b8ac">  <td>25/02/24 22:53:56</td>   <td>2772</td> <td title="&lt;&lt;BaseClass.methodAfterSuite()[pri:0, instance:createLeads.TC_01@40a4337a]">&lt;&lt;methodAfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1554547125</td>   <td></td> </tr>
-<tr bgcolor="627689">  <td>25/02/24 22:53:32</td>   <td>-20630</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01.methodTC_01()[pri:0, instance:createLeads.TC_01@40a4337a]">methodTC_01</td> 
+<tr bgcolor="627689">  <td>25/03/11 19:17:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReadDataFromCmdLine.methodTC01()[pri:0, instance:practice12.ReadDataFromCmdLine@799f10e1]">methodTC01</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
